Vision/Flir: Implemented heartbeat.

--- a/etc/x8-02.ini
+++ b/etc/x8-02.ini
@@ -85,6 +85,14 @@ Enabled                                    = Never
 Entity Label                               = Photo Trigger
 Trigger Frequency                          = 0.4
 
+[Vision.Flir]
+Enabled                                    = Always
+Entity Label                               = Flir
+Debug Level                                = Debug
+IPv4 Address                               = 192.168.10.19
+TCP control                                = 6000
+TCP notification                           = 6002
+
 #[Control.Path.Formation.Controller]
 #Leader Name                                = form-leader-02
 #Leader Output Frequency                    = 10
